[project]
name = "intro2streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.43.0",
    "streamlit-folium>=0.24.0",
]
